tests/transpiler/x/py/order_by_map.py
# Code generated by Mochi transpiler.
# Version 0.10.34, generated on 2025-07-22 09:56 +0700
from __future__ import annotations
from dataclasses import dataclass
from typing import List, Dict
import json

@dataclass
class Data:
    a: int
    b: int

data = [Data(1, 2), Data(1, 1), Data(0, 5)]
sorted = [x for x in sorted([x for x in data], key=lambda x: tuple([x.a, x.b]))]
print(json.dumps(sorted))
